client: add popup; add new folder creation

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -25,3 +25,12 @@ body {
 	display: flex;
 	flex-direction: column;
 }
+
+button {
+	padding: 4px 12px;
+	border-radius: 4px;
+	border: none;
+	background-color: @font-color;
+	color: white;
+	cursor: pointer;
+}
