--- a/client/src/components/disk/disk.less
+++ b/client/src/components/disk/disk.less
@@ -1,8 +1,19 @@
+@import '../../utils/colors.less';
 .disk {
 	margin-top: 20px;
 
 	&__btns {
 		display: flex;
 		gap: 10px;
+	}
+
+	&__upload-input {
+		display: none;
+	}
+
+	&__upload-label {
+		border: 2px dashed @font-color;
+		padding: 5px 10px;
+		cursor: pointer;
 	}
 }
