client:  add drag and drop files

--- a/client/src/components/disk/disk.less
+++ b/client/src/components/disk/disk.less
@@ -17,3 +17,13 @@
 		cursor: pointer;
 	}
 }
+
+.drop-area {
+	width: 100%;
+	height: calc(100vh - 50px - 40px);
+	margin: 20px;
+	border: dashed @font-color 2px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
