client: add search input

--- a/client/src/components/disk/disk.less
+++ b/client/src/components/disk/disk.less
@@ -1,6 +1,6 @@
 @import '../../utils/colors.less';
 .disk {
-	margin-top: 20px;
+	margin: 20px 40px 0;
 
 	&__btns {
 		display: flex;
@@ -15,6 +15,14 @@
 		border: 2px dashed @font-color;
 		padding: 5px 10px;
 		cursor: pointer;
+	}
+
+	&__select {
+		margin-left: auto;
+	}
+
+	&__search {
+		width: 200px;
 	}
 }
 
