client: add view of list; add truncate for names

--- a/client/src/components/disk/fileList/filelist.less
+++ b/client/src/components/disk/fileList/filelist.less
@@ -20,6 +20,14 @@
 	}
 }
 
+.filelist-plate {
+	display: flex;
+	margin: 20px 0;
+	column-gap: 2rem;
+	row-gap: 4rem;
+	flex-wrap: wrap;
+}
+
 .file-enter-active {
 	animation: file-enter 500ms forwards;
 }
