--- a/client/src/components/disk/fileList/file/file.less
+++ b/client/src/components/disk/fileList/file/file.less
@@ -49,3 +49,25 @@
 		display: block;
 	}
 }
+
+.file-plate {
+	width: 100px;
+	height: 100px;
+	cursor: pointer;
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+
+	&__img {
+		height: 80px;
+		width: 80px;
+	}
+
+	&__btns {
+		display: none;
+	}
+
+	&:hover &__btns {
+		display: block;
+	}
+}
