client: add avatar logic; add profile modal

--- a/client/src/components/navbar/navbar.less
+++ b/client/src/components/navbar/navbar.less
@@ -17,6 +17,17 @@
 		margin-left: auto;
 		margin-right: 20px;
 	}
+
+	&__logout {
+		margin-left: 10px;
+	}
+
+	&__avatar {
+		cursor: pointer;
+		width: 30px;
+		height: 30px;
+		border-radius: 50%;
+	}
 }
 
 .container {
