--- a/client/src/components/navbar/navbar.less
+++ b/client/src/components/navbar/navbar.less
@@ -11,15 +11,17 @@
 		margin-left: 10px;
 		font-size: 24px;
 		font-weight: 700;
+		cursor: pointer;
 	}
 
 	&__login {
 		margin-left: auto;
 		margin-right: 20px;
+		cursor: pointer;
 	}
 
-	&__logout {
-		margin-left: 10px;
+	&__registration {
+		cursor: pointer;
 	}
 
 	&__avatar {
