client: shift columns in file list

--- a/client/src/components/disk/disk.less
+++ b/client/src/components/disk/disk.less
@@ -24,6 +24,11 @@
 	&__search {
 		width: 200px;
 	}
+
+	&__back:disabled {
+		background-color: gray;
+		cursor: not-allowed;
+	}
 }
 
 .drop-area {
