--- a/client/src/components/disk/fileList/file/file.less
+++ b/client/src/components/disk/fileList/file/file.less
@@ -40,6 +40,11 @@
 		grid-column-start: 6;
 		display: block;
 	}
+
+	&__download,
+	&__delete {
+		width: 80%;
+	}
 }
 
 .file-plate {
@@ -48,6 +53,7 @@
 	cursor: pointer;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	gap: 5px;
 
 	&__img {
@@ -61,5 +67,12 @@
 
 	&:hover &__btns {
 		display: block;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 5px;
+		button {
+			width: 100%;
+		}
 	}
 }
